# favory

./: .gitignore  TopLaptops.js  a  algorithm.txt  calculations.js  categories.json  dataLoader.js  index.js  package-lock.json  package.json  readme.md  requirements.txt  s  selector.js
archive/: lastprice-laptops.json
data-processor/: Cargo.toml
data_processor/: Cargo.toml  categories.json  dburl.sh  laptops.json  readme.md  run.sh
data_processor/laptops/: bug-laptops.json  ivory-laptops.json
data_processor/src/: errors.rs  laptop_set.rs  main.rs
data_processor/src/cli/: generic_cli.rs  mod.rs
data_processor/src/commands/: calculate_scores.rs  load_categories.rs  load_laptops.rs  mod.rs  recalculate.rs
db_access/: .env  .gitignore  Cargo.toml
models/: Benchmark.js  CachedPuScore.js  Category.js  Cpu.js  GlobalBenchmarkScore.js  Gpu.js  Laptop.js  MaxBenchmarkScore.js  Models.js
production/: build.sh  cleanup.sh  readme.md  roles.sql  start.sh
public/: index.html
research/laptop_rating/: Cargo.toml
research/laptop_rating/src/: main.rs
results_tester/: main.py
scraper/: Cargo.toml  laptops.json  time.txt
scraper/src/: error.rs  main.rs  paginated_scraper.rs
scraper/src/bug/: mod.rs
scrapper/: bug-laptops.json  convert_benchmark_fields_to_laptop_fields.py  ivory-laptops.json  main.py  requirements.txt
scripts/: index.js
scss/: index.css.map  index.scss
selector/: .gitignore  Cargo.toml  dburl.sh  package-lock.json  package.json  readme.md  run.sh
selector/src/: dtos.rs  errors.rs  fetch_data.rs  main.rs  select.rs  top_laptops.rs
selector/src/controllers/: laptop.rs
selector/src/fetch_data/: mod.rs
selector/src/routes/: laptop.rs
selector/src/selection/: mod.rs  scores_in_categories_of_laptops.rs  select.rs  top_laptops.rs  user_category_scores.rs
selector/src/server/: mod.rs
selector/src/services/: category.rs  laptop.rs  mod.rs  selector.rs
views/: base.pug  index.pug  result.pug
webapp/: mutexprotected.ts  next.config.js  package-lock.json  package.json  (+4 more)
(+159 files in other folders)
