[package]
name = "data-processor"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
bigdecimal = "0.1.2"
serde_json = {version = "1.0.64"}
serde = {version = "1.0.126", features = ["derive"]}
maplit = {version = "1.0.2"}
db_access = {path = "../db_access"}
paste = "1.0.5"