[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
reqwest = "0.11.9"
regex = "1.5.4"
thiserror = "1.0.30"
anyhow = "1.0.53"
async-trait = "0.1.52"
scraper = "0.12.0"
lazy_static = "1.4.0"
futures = "0.3.21"
log = "0.4.14"
