[package]
name = "laptop_rating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph="0.6.0"
db_access={path="../../db_access"}
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
itertools="0.10.3"